fix navigation toggler so icon is visible

--- a/app/assets/stylesheets/application_layout.scss
+++ b/app/assets/stylesheets/application_layout.scss
@@ -12,7 +12,47 @@
   max-height: 30px;
 }
 .navbar-toggler-icon {
-  max-height: 1.0em;
+  max-height: 1.5em;
+}
+button.navbar-toggler.navbar-dark {
+  margin-top: -10px;
+  padding-left: 0;
+}
+.navbar-dark.navbar-toggler-icon {
+
+}
+
+@media (max-width: 1024px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    // .navbar-collapse.collapse {
+    //     display: none!important;
+    // }
+    .navbar-nav > li {
+        display: block;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-toggler-icon {
+
+    }
 }
 
 footer {
